--- a/js/package.json
+++ b/js/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@open-rpc/generator-client-js",
   "private": false,
-  "version": "1.0.16",
+  "version": "1.0.17",
   "description": "",
   "repository": {
     "type": "git",
@@ -28,11 +28,12 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^2.19.0",
-    "node-fetch": "^2.3.0",
     "fs-extra": "^7.0.1",
+    "is-url": "^1.2.4",
     "jest": "^24.0.0",
     "json-schema-ref-parser": "^6.0.3",
     "lodash": "^4.17.11",
+    "node-fetch": "^2.3.0",
     "typescript": "^3.2.4"
   }
 }
