--- a/templates/js/static/package.json
+++ b/templates/js/static/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "djv": "^2.1.1",
     "jayson": "^2.1.1",
     "node-fetch": "^2.3.0"
   },
