--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "jest": "^24.0.0",
     "lodash": "^4.17.11",
     "typescript": "^3.2.4"
+  },
+  "devDependencies": {
+    "jayson": "^2.1.2"
   }
 }
