feat(multilang): rust client generator
fixes #17
fixes #19

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,21 +21,23 @@ aliases:
   - &filter-only-semantic-pr
     branches:
       only:  /^(pull|dependabot|fix|feat)\/.*$/
-      
   - &filter-only-fork-pr
     branches:
       only:  /^pull\/.*$/
 
 defaults: &defaults
   working_directory: ~/generator-client
+  docker:
+    - image: circleci/node:10
 
 jobs:
   test:
     <<: *defaults
-    docker:
-      - image: circleci/node:10
     steps:
       - checkout
+      - run: curl https://sh.rustup.rs -sSf | sh -s -- -y
+      - run: echo 'export PATH=$HOME/.cargo/bin:$PATH' >> $BASH_ENV
+      - run: source /home/circleci/.bashrc
       - restore_cache: *restore-deps-cache
       - run: npm install
       - run: npm install codecov
@@ -45,8 +47,6 @@ jobs:
 
   build:
     <<: *defaults
-    docker:
-      - image: circleci/node:10
     steps:
       - checkout
       - restore_cache: *restore-deps-cache
@@ -56,8 +56,6 @@ jobs:
 
   release:
     <<: *defaults
-    docker:
-      - image: circleci/node:10
     steps:
       - checkout
       - restore_cache: *restore-deps-cache
@@ -70,17 +68,11 @@ workflows:
   version: 2
   analysis:
     jobs:
-      - hold:
-          filters: *filter-only-fork-pr
-          type: approval
       - test:
           filters: *filter-only-semantic-pr
-          requires:
-            - hold
       - build:
           filters: *filter-only-semantic-pr
           requires:
-            - hold
             - test
 
   release:
