--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@open-rpc/meta-schema": "^1.2.0",
+    "@open-rpc/meta-schema": "^1.2.2",
     "@open-rpc/schema-utils-js": "1.5.0",
     "@types/lodash": "^4.14.123",
     "commander": "^2.19.0",
@@ -37,10 +37,12 @@
     "jest": "^24.5.0",
     "json-schema-to-typescript": "^6.1.3",
     "lodash": "^4.17.11",
+    "quicktype": "13.0.10",
+    "quicktype-core": "^6.0.26",
     "typescript": "^3.3.3333"
   },
   "devDependencies": {
-    "@open-rpc/examples": "^1.2.2",
+    "@open-rpc/examples": "^1.2.5",
     "@types/fs-extra": "^5.0.5",
     "@types/jest": "^24.0.11",
     "ts-jest": "^24.0.0"
