--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@open-rpc/generator-client-js",
   "private": false,
-  "version": "1.0.20",
+  "version": "1.0.21",
   "description": "",
   "repository": {
     "type": "git",
@@ -14,8 +14,7 @@
   "files": [
     "src/*.js",
     "bin/*.js",
-    "client-static/*",
-    "client-templated/*",
+    "templates/**/*",
     ".node-version"
   ],
   "scripts": {
