--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "fs-extra": "^7.0.1",
     "is-url": "^1.2.4",
     "jest": "^24.0.0",
+    "json-schema-to-typescript": "^6.1.3",
     "lodash": "^4.17.11",
-    "typescript": "^3.2.4"
+    "typescript": "^3.3.3333"
   },
   "devDependencies": {
-    "@open-rpc/examples": "^1.0.8"
+    "@open-rpc/examples": "^1.0.10"
   }
 }
