--- a/templates/js/static/package.json
+++ b/templates/js/static/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc && typedoc --out docs"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "djv": "^2.1.1",
     "jayson": "^2.1.1",
-    "node-fetch": "^2.3.0"
+    "node-fetch": "^2.3.0",
+    "typedoc": "^0.14.2"
   },
   "devDependencies": {
     "typescript": "^3.2.4",
