--- a/templates/js/static/tsconfig.json
+++ b/templates/js/static/tsconfig.json
@@ -6,6 +6,8 @@
     "target": "es6",
     "noImplicitAny": false,
     "sourceMap": true,
-    "outDir": "dist"
+    "outDir": "build",
+    "declarationDir": "build",
+    "declaration": true
   }
 }
