--- a/templates/js/static/package.json
+++ b/templates/js/static/package.json
@@ -2,14 +2,17 @@
   "name": "template-client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
-    "build": "tsc && typedoc --out docs"
+    "build": "tsc && typedoc --out docs",
+    "publish": "npm publish --access=public"
   },
+  "files": [
+    "build/*"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "djv": "^2.1.1",
     "jayson": "^2.1.1",
     "node-fetch": "^2.3.0",
     "typedoc": "^0.14.2"
