fix: change out the validation

--- a/templates/js/static/package.json
+++ b/templates/js/static/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@open-rpc/schema-utils-js": "git+https://github.com/open-rpc/schema-utils-js.git#feat/make-id",
+    "ajv": "^6.10.0",
     "jayson": "^2.1.1",
     "node-fetch": "^2.3.0",
     "typedoc": "^0.14.2"
