--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@open-rpc/schema-utils-js": "^1.0.1",
+    "@open-rpc/schema-utils-js": "git+https://github.com/open-rpc/schema-utils-js.git#feat/make-id",
     "commander": "^2.19.0",
     "fs-extra": "^7.0.1",
     "is-url": "^1.2.4",
-    "jest": "^24.0.0",
+    "jest": "^24.3.0",
     "json-schema-to-typescript": "^6.1.3",
     "lodash": "^4.17.11",
     "typescript": "^3.3.3333"
