fix: tests passing again

--- a/templates/js/static/package.json
+++ b/templates/js/static/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@open-rpc/schema-utils-js": "git+https://github.com/open-rpc/schema-utils-js.git#feat/make-id",
+    "@open-rpc/schema-utils-js": "git+https://github.com/open-rpc/schema-utils-js.git",
     "ajv": "^6.10.0",
     "jayson": "^2.1.1",
     "node-fetch": "^2.3.0",
