--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@open-rpc/generator-client",
   "private": false,
-  "version": "1.0.26",
+  "version": "1.0.27",
   "description": "",
   "repository": {
     "type": "git",
@@ -14,7 +14,7 @@
   "files": [
     "src/*.js",
     "bin/*.js",
-    "templates/*",
+    "templates/**/*",
     ".node-version"
   ],
   "scripts": {
