fix: include all templates

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "files": [
     "src/*.js",
     "bin/*.js",
-    "templates/**/*",
+    "templates/",
     ".node-version"
   ],
   "scripts": {
