--- a/templates/js/static/tsconfig.json
+++ b/templates/js/static/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "target": "es6",
-    "noImplicitAny": false,
+    "strict": true,
     "sourceMap": true,
     "outDir": "build",
     "declarationDir": "build",
