--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@open-rpc/schema-utils-js": "1.0.2",
+    "@open-rpc/schema-utils-js": "1.0.3",
     "commander": "^2.19.0",
     "fs-extra": "^7.0.1",
     "is-url": "^1.2.4",
-    "jest": "^24.3.0",
+    "jayson": "^2.1.2",
+    "jest": "^24.5.0",
     "json-schema-to-typescript": "^6.1.3",
     "lodash": "^4.17.11",
     "typescript": "^3.3.3333"
