fix: publish is broken

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "tsc && cp -R templates/js/static build/templates/js/static",
     "watch:build": "tsc --watch",
     "watch:test": "jest --watch",
-    "publish": "npm run build && npm publish --access=public"
+    "publish": "npm run build"
   },
   "author": "",
   "license": "Apache-2.0",
