fix: upgrade to new packages

--- a/templates/js/static/tsconfig.json
+++ b/templates/js/static/tsconfig.json
@@ -8,6 +8,7 @@
     "sourceMap": true,
     "outDir": "build",
     "declarationDir": "build",
-    "declaration": true
+    "declaration": true,
+    "resolveJsonModule": true
   }
 }
