--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@open-rpc/schema-utils-js": "1.0.3",
+    "@open-rpc/schema-utils-js": "1.5.0",
+    "@types/lodash": "^4.14.123",
     "commander": "^2.19.0",
     "fs-extra": "^7.0.1",
     "is-url": "^1.2.4",
@@ -38,7 +39,7 @@
     "typescript": "^3.3.3333"
   },
   "devDependencies": {
-    "@open-rpc/examples": "1.0.16",
+    "@open-rpc/examples": "^1.2.1",
     "@types/fs-extra": "^5.0.5",
     "@types/jest": "^24.0.11",
     "ts-jest": "^24.0.0"
