--- a/package.json
+++ b/package.json
@@ -35,8 +35,12 @@
     "is-url": "^1.2.4",
     "jayson": "^2.1.2",
     "jest": "^24.5.0",
+    "json-schema-faker": "^0.5.0-rc16",
     "json-schema-to-typescript": "^6.1.3",
     "lodash": "^4.17.11",
+    "quicktype": "^15.0.174",
+    "quicktype-core": "^6.0.26",
+    "transform-json-types": "^0.7.0",
     "typescript": "^3.3.3333"
   },
   "devDependencies": {
