--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "json-schema-faker": "^0.5.0-rc16",
     "json-schema-to-typescript": "^6.1.3",
     "lodash": "^4.17.11",
-    "quicktype": "^15.0.174",
+    "promise-series": "^1.0.0",
+    "quicktype": "13.0.10",
     "quicktype-core": "^6.0.26",
     "transform-json-types": "^0.7.0",
     "typescript": "^3.3.3333"
