--- a/templates/rs/static/Cargo.toml
+++ b/templates/rs/static/Cargo.toml
@@ -4,3 +4,5 @@ version = "1.0.0"
 authors = ["Zachary Belford <belfordz66@gmail.com>"]
 
 [dependencies]
+jsonrpc-client-core = "0.5.0"
+serde_json = "1.0"
