--- a/templates/rs/static/Cargo.toml
+++ b/templates/rs/static/Cargo.toml
@@ -5,4 +5,6 @@ authors = ["Zachary Belford <belfordz66@gmail.com>"]
 
 [dependencies]
 jsonrpc-client-core = "0.5.0"
+serde = { version = "1.0",  features = ["derive"] }
+serde_derive = "1.0"
 serde_json = "1.0"
