--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,8 +75,13 @@ workflows:
           type: approval
       - test:
           filters: *filter-only-semantic-pr
+          requires:
+            - hold
       - build:
           filters: *filter-only-semantic-pr
+          requires:
+            - hold
+            - test
 
   release:
     jobs:
