--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,8 @@ jobs:
     steps:
       - checkout
       - run: curl https://sh.rustup.rs -sSf | sh -s -- -y
-      - run: source $HOME/.cargo/env
+      - run: echo 'export PATH=$HOME/.cargo/bin:$PATH' >> $BASH_ENV
+      - source /home/circleci/.bashrc
       - restore_cache: *restore-deps-cache
       - run: npm install
       - run: npm install codecov
