--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
       - checkout
       - run: curl https://sh.rustup.rs -sSf | sh -s -- -y
       - run: echo 'export PATH=$HOME/.cargo/bin:$PATH' >> $BASH_ENV
-      - source /home/circleci/.bashrc
+      - run: source /home/circleci/.bashrc
       - restore_cache: *restore-deps-cache
       - run: npm install
       - run: npm install codecov
