--- a/templates/rs/static/Cargo.toml
+++ b/templates/rs/static/Cargo.toml
@@ -10,6 +10,6 @@ serde = { version = "1.0",  features = ["derive"] }
 serde_json = "1.0"
 
 [dev-dependencies]
-autorand = "0.1"
+autorand = { version = "0.2", features = ["json", "json-value-always-null"] }
 futures = "0.1.25"
 failure = "0.1.5"
