--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@open-rpc/meta-schema": "^1.2.2",
-    "@open-rpc/schema-utils-js": "1.5.1",
+    "@open-rpc/meta-schema": "^1.3.1",
+    "@open-rpc/schema-utils-js": "^1.6.3",
     "@types/lodash": "^4.14.123",
     "commander": "^2.19.0",
     "fs-extra": "^7.0.1",
@@ -42,7 +42,7 @@
     "typescript": "^3.3.3333"
   },
   "devDependencies": {
-    "@open-rpc/examples": "^1.2.5",
+    "@open-rpc/examples": "^1.3.0",
     "@types/fs-extra": "^5.0.5",
     "@types/jest": "^24.0.11",
     "ts-jest": "^24.0.0"
