--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "test": "jest --coverage",
     "build": "tsc && cp -R templates build/.",
     "watch:build": "tsc --watch",
-    "watch:test": "jest --watch",
-    "publish": "npm run build"
+    "watch:test": "jest --watch"
   },
   "author": "",
   "license": "Apache-2.0",
