--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "start": "./bin/cli.js",
     "test": "jest --coverage",
-    "build": "tsc && cp -R templates build/.",
+    "build": "tsc && cp -R templates build/. && chmod +x build/src/cli.js",
     "watch:build": "tsc --watch",
     "watch:test": "jest --watch"
   },
