--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "lodash": "^4.17.11"
   },
   "devDependencies": {
-    "@types/fs-extra": "^5.0.5",
-    "@types/lodash": "^4.14.123",
-    "@types/jest": "^24.0.11",
-    "@open-rpc/meta-schema": "^1.3.1",
     "@open-rpc/examples": "^1.3.0",
+    "@open-rpc/meta-schema": "^1.3.1",
+    "@types/fs-extra": "^5.0.5",
+    "@types/jest": "^24.0.11",
+    "@types/lodash": "^4.14.123",
     "jest": "^24.5.0",
-    "typescript": "^3.3.3333",
-    "ts-jest": "^24.0.0"
+    "ts-jest": "^24.0.0",
+    "tslint": "^5.16.0",
+    "typescript": "^3.3.3333"
   }
 }
