--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
+    "@iarna/toml": "^2.2.3",
     "@open-rpc/schema-utils-js": "^1.9.0",
     "@open-rpc/typings": "^1.0.4",
     "commander": "^2.19.0",
