--- a/package.json
+++ b/package.json
@@ -27,22 +27,22 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@iarna/toml": "^2.2.3",
-    "@open-rpc/schema-utils-js": "^1.9.0",
-    "@open-rpc/typings": "^1.0.4",
-    "commander": "^2.19.0",
-    "fs-extra": "^7.0.1",
-    "lodash": "^4.17.11"
+    "@iarna/toml": "2.2.3",
+    "@open-rpc/schema-utils-js": "1.9.0",
+    "@open-rpc/typings": "^1.2.1",
+    "commander": "2.19.0",
+    "fs-extra": "7.0.1",
+    "lodash": "4.17.11"
   },
   "devDependencies": {
-    "@open-rpc/examples": "^1.3.1",
-    "@open-rpc/meta-schema": "^1.3.2",
-    "@types/fs-extra": "^7.0.0",
-    "@types/jest": "^24.0.11",
-    "@types/lodash": "^4.14.123",
-    "jest": "^24.5.0",
-    "ts-jest": "^24.0.0",
-    "tslint": "^5.16.0",
-    "typescript": "^3.3.3333"
+    "@open-rpc/examples": "^1.3.3",
+    "@open-rpc/meta-schema": "1.3.2",
+    "@types/fs-extra": "7.0.0",
+    "@types/jest": "24.0.11",
+    "@types/lodash": "4.14.123",
+    "jest": "24.5.0",
+    "ts-jest": "24.0.0",
+    "tslint": "5.16.0",
+    "typescript": "3.3.3333"
   }
 }
