--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/fs-extra": "7.0.0",
     "@types/jest": "24.0.18",
     "@types/lodash": "4.14.138",
-    "jest": "24.9.0",
+    "jest": "^24.9.0",
     "ts-jest": "24.0.0",
     "tslint": "5.19.0",
     "typescript": "3.6.2"
