--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
+    "@etclabscore/json-schema-to-types": "^1.10.1",
     "@iarna/toml": "2.2.3",
     "@open-rpc/typings": "^1.8.0",
     "commander": "4.1.0",
