--- a/templates/server/typescript/tsconfig.json
+++ b/templates/server/typescript/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "baseUrl": ".",
+    "target": "esnext",
     "module": "commonjs",
-    "lib": [
-      "ES2015"
-    ],
+    "moduleResolution": "node",
     "declaration": true,
     "outDir": "./build",
     "strict": true,
