--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,10 @@
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "templates",
+    "generated"
+  ]
 }
