--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@open-rpc/typings": "^1.8.0",
     "commander": "4.1.0",
     "fs-extra": "7.0.1",
+    "inquirer": "^7.0.4",
     "lodash": "4.17.15"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
     "@types/connect": "^3.4.33",
     "@types/cors": "^2.8.6",
     "@types/fs-extra": "8.0.1",
+    "@types/inquirer": "^6.5.0",
     "@types/jest": "25.1.0",
     "@types/lodash": "4.14.149",
     "jest": "^25.1.0",
