--- a/templates/server/typescript/Dockerfile
+++ b/templates/server/typescript/Dockerfile
@@ -1,8 +1,6 @@
-FROM node:11-alpine
+FROM node:12-alpine
 COPY package.json .
 RUN npm set progress=false
 RUN npm install --only=production
-COPY ./src ./src
-COPY ./bin ./bin
-COPY ./templates ./templates
-ENTRYPOINT [ "./bin/cli.js" ]
+COPY ./build ./build
+ENTRYPOINT [ "node ./build/index.js" ]
