--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@open-rpc/generator",
   "private": false,
   "version": "1.0.34",
-  "description": "",
+  "description": "Generator for OpenRPC",
   "repository": {
     "type": "git",
     "url": "https://github.com/open-rpc/generator.git"
