fix: pacakge name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@xops/snaps-openrpc-generator",
+  "name": "@xops.net/snaps-openrpc-generator",
   "private": false,
   "version": "1.0.34",
   "description": "",
