--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "@open-rpc/server-js": "^1.8.0",
     "@types/connect": "^3.4.33",
     "@types/cors": "^2.8.6",
-    "@types/jest": "26.0.10",
-    "@types/fs-extra": "^9.0.1",
+    "@types/fs-extra": "8.1.0",
     "@types/inquirer": "^7.3.0",
+    "@types/jest": "26.0.10",
     "@types/lodash": "^4.14.158",
     "jest": "^26.2.1",
     "ts-jest": "^26.1.4",
