fix: update meta schema nd jest dev deps

--- a/package.json
+++ b/package.json
@@ -39,14 +39,14 @@
   },
   "devDependencies": {
     "@open-rpc/examples": "^1.6.0",
-    "@open-rpc/meta-schema": "^1.12.7",
+    "@open-rpc/meta-schema": "^1.14.2",
     "@open-rpc/schema-utils-js": "^1.14.0",
     "@open-rpc/server-js": "^1.8.0",
     "@types/connect": "^3.4.33",
     "@types/cors": "^2.8.6",
     "@types/fs-extra": "9.0.6",
     "@types/inquirer": "^7.3.0",
-    "@types/jest": "26.0.14",
+    "@types/jest": "^26.0.22",
     "@types/lodash": "^4.14.158",
     "jest": "^26.2.1",
     "ts-jest": "^26.1.4",
