fix: package version updates for client and server additional version updates for fs-extra with a version patch for copy to derference symbolic links to allow subdirectory copy

--- a/package.json
+++ b/package.json
@@ -31,20 +31,20 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@iarna/toml": "^2.2.5",
-    "@open-rpc/typings": "^1.11.3",
+    "@open-rpc/typings": "^1.11.4",
     "commander": "^7.2.0",
-    "fs-extra": "^9.1.0",
+    "fs-extra": "^10.0.0",
     "inquirer": "^8.0.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@open-rpc/examples": "^1.6.0",
-    "@open-rpc/meta-schema": "^1.14.2",
-    "@open-rpc/schema-utils-js": "^1.14.0",
-    "@open-rpc/server-js": "^1.8.0",
+    "@open-rpc/examples": "1.6.0",
+    "@open-rpc/meta-schema": "1.14.2",
+    "@open-rpc/schema-utils-js": "1.15.0",
+    "@open-rpc/server-js": "1.8.5",
     "@types/connect": "^3.4.33",
     "@types/cors": "^2.8.6",
-    "@types/fs-extra": "9.0.11",
+    "@types/fs-extra": "^9.0.1",
     "@types/inquirer": "^7.3.0",
     "@types/jest": "^26.0.22",
     "@types/lodash": "^4.14.158",
