--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "main": "./build/index.js",
   "bin": {
-    "open-rpc-generator": "./build/cli.js"
+    "open-rpc-generator": "build/cli.js"
   },
   "files": [
     "build/**/*",
@@ -31,7 +31,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@iarna/toml": "^2.2.5",
-    "@open-rpc/typings": "^1.11.4",
+    "@open-rpc/typings": "1.12.0",
     "commander": "^7.2.0",
     "fs-extra": "^10.0.0",
     "inquirer": "^8.0.0",
