--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,7 @@ aliases:
 defaults: &defaults
   working_directory: ~/generator
   docker:
-    - image: circleci/node:14
-
+    - image: cimg/node:18.13.0
 jobs:
   test:
     <<: *defaults
@@ -88,5 +87,6 @@ workflows:
             - build
       - release:
           filters: *filter-only-master
+          context: open-rpc-deployer
           requires:
             - hold
