--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "npm run test:lint && npm run test:unit && npm run test:integration",
     "test:unit": "jest --coverage",
     "test:integration": "npm run build && ./build/cli.js generate -c test-generator-config.json && ((cd ./generated/server/typescript/ && npm install && npm start) & (cd ./generated/client/typescript && npm install && npm run build && cd - && sleep 15 && node ./integration-test.js))",
-    "test:lint": "tslint -c tslint.json 'src/**/*.ts' --fix",
+    "test:lint": "eslint . --ext .ts --fix",
     "build": "npm run build:clean && tsc && chmod +x build/cli.js",
     "build:clean": "rm -rf build",
     "watch:build": "tsc --watch",
@@ -31,26 +31,29 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@iarna/toml": "^2.2.5",
-    "@open-rpc/typings": "^1.12.3",
+    "@open-rpc/typings": "^1.12.4",
     "commander": "^7.2.0",
     "fs-extra": "^10.0.0",
     "inquirer": "^8.2.5",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@open-rpc/examples": "1.6.1",
-    "@open-rpc/meta-schema": "1.14.2",
-    "@open-rpc/schema-utils-js": "1.15.0",
-    "@open-rpc/server-js": "1.9.0",
-    "@types/connect": "^3.4.33",
-    "@types/cors": "^2.8.6",
-    "@types/fs-extra": "^9.0.1",
+    "@open-rpc/examples": "^1.7.2",
+    "@open-rpc/meta-schema": "^1.14.9",
+    "@open-rpc/schema-utils-js": "^2.0.2",
+    "@open-rpc/server-js": "^1.9.5",
+    "@types/connect": "^3.4.38",
+    "@types/cors": "^2.8.17",
+    "@types/fs-extra": "^11.0.4",
     "@types/inquirer": "^9.0.3",
-    "@types/jest": "^26.0.22",
-    "@types/lodash": "^4.14.158",
-    "jest": "^26.2.1",
-    "ts-jest": "^26.1.4",
-    "tslint": "^6.1.2",
+    "@types/jest": "^29.5.12",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "@types/lodash": "^4.17.1",
+    "eslint": "^7.17.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "typescript": "^4.9.5",
     "typescript": "^4.0.2"
   }
 }
