feat: this is a major revision to most packages. The changes support the new extensions specification as well as major package bumps for React,Material,eslint,and gatsby.
BREAKING CHANGE: most apis will be ESM except for server, and use
the latest versions of packages. This will change some of the
logic or processes you may have been using there is also a bump
to schema-utiils for most packages and meta-schema.

--- a/templates/client/typescript/tsconfig.json
+++ b/templates/client/typescript/tsconfig.json
@@ -1,15 +1,18 @@
 {
-  "lib": [ "ES2015" ],
+  "lib": [
+    "ES2015"
+  ],
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "ESNext",
     "esModuleInterop": true,
-    "target": "es6",
+    "target": "ES2022",
     "strict": true,
     "sourceMap": true,
     "outDir": "build",
     "declarationDir": "build",
     "declaration": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "moduleResolution": "bundler"
   },
   "typedocOptions": {
     "name": "generated client",
