--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "start": "npm run build && ./build/cli.js",
     "test": "npm run test:lint && npm run test:unit && npm run test:integration",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
-    "test:unit": "jest --coverage",
-    "test:integration": "npm run build && ./build/cli.js generate -c test-generator-config.json && ((cd ./generated/server/typescript/ && npm install && npm start) & (cd ./generated/client/typescript && npm install && npm run build && cd - && sleep 15 && node ./integration-test.js))",
+    "test:unit": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
+    "test:integration": "npm run build && ./build/cli.js generate -c test-generator-config.json && ((cd ./generated/server/typescript/ && npm install && npm start) & (cd ./generated/client/typescript && npm install && npm run build && cd - && sleep 15 && node ./integration-test.mjs))",
     "build": "npm run build:clean && tsc && chmod +x build/cli.js",
     "build:clean": "rm -rf build",
     "watch:build": "tsc --watch",
