--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@eslint/js": "9.21.0",
     "@open-rpc/examples": "^1.7.2",
     "@open-rpc/meta-schema": "^1.14.9",
-    "@open-rpc/schema-utils-js": "^2.0.2",
+    "@open-rpc/schema-utils-js": "2.1.2",
     "@open-rpc/server-js": "^1.9.5",
     "@types/connect": "^3.4.38",
     "@types/cors": "^2.8.17",
