--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@iarna/toml": "^2.2.5",
-    "@open-rpc/typings": "^1.12.4",
+    "@open-rpc/typings": "1.13.0",
     "commander": "^7.2.0",
     "fs-extra": "^11.2.0",
     "inquirer": "^12.4.2",
